exercicios/kubevius/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  namespace: kubevious
  name: traefik-daemon-set
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: kubevious.rancher.<SEU_DOMINIO>
      http:
        paths:
          - backend:
              serviceName: kubevious-ui-nodeport
              servicePort: 80
